<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    tools:context="myst.developersystem.RegisterActivity">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_email"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_password"/>

    <EditText
        android:id="@+id/registerPasswordCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/hint_password_repeat"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/button_register"/>

</LinearLayout>