<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    tools:context="myst.developersystem.InvestmentFormActivity">

    <EditText
        android:id="@+id/investmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_investment_name"/>

    <EditText
        android:id="@+id/investmentCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_investment_city"/>

    <EditText
        android:id="@+id/investmentPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="phone"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_investment_postal"/>

    <EditText
        android:id="@+id/investmentStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_investment_street"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/button_save"/>

</LinearLayout>