<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    tools:context="myst.developersystem.FlatSearchActivity">

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:hint="@string/hint_search_city"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="@dimen/smallMargin">
            <EditText
                android:id="@+id/areaFrom"
                style="@style/TableCellDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/hint_search_area_from"/>
            <EditText
                android:id="@+id/areaTo"
                style="@style/TableCellDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/hint_search_area_to"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="@dimen/smallMargin">
            <EditText
                android:id="@+id/roomsFrom"
                style="@style/TableCellDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/hint_search_rooms_from"/>
            <EditText
                android:id="@+id/roomsTo"
                style="@style/TableCellDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/hint_search_rooms_to"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_flat_floor"/>

    <Spinner
        android:id="@+id/floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/button_search"/>

</LinearLayout>